Changed category to with match repo name

--- a/_posts/2016-09-18-chapter9.md
+++ b/_posts/2016-09-18-chapter9.md
@@ -3,7 +3,7 @@ layout: post
 title: "Chapter 9: Designing with Data Structures"
 description: "Designing Clojure apps with maps, vectors, lists and sets"
 date:   2016-09-18 11:48:58 +0100
-categories: clojure
+categories: clojurebridge-curriculum
 thumbnail: assets/klipse.png
 guid: "F37D5762-67C3-4842-AE05-552B7BA31225"
 author: "@jr0cket"
